[#144][review] refactor : 경고 수정